Assembler 2.0 (#82)
* Allow global macros to be called from other files.

* (WIP) Starting new assembler.

* Working on new assembler (WIP).

* New assembler working (Missing labels, documentation and tests).

* Fix tests.

* Add assembler tests.

* Starting editor scope rework.

* Fix scope bugs in editor.

* Add relative reference support to the editor.

* Remove debug messages.

* Fix move line up/down actions' style loss when the lines are the same.

* Fix label style when error and warnings are shown and there are spaces at the start.

* Improve duplicate/shadowed label inspector.

* Fix scope duplication problem when moving macro definitions.

* Change shadow warnings text.

* Add shadowed macros warnings.

* Add more macro features to the editor.

* New indexing thread system.

* Add assembler documentation.

* Fix javadocs.

* Add LabelAddressNotFoundInspector.

* Fix typo in spanish general.yml.

* MIPS32Assembler wasn't allocating memory from the data section, causing collisions.

* Move label table to the new scope system.

* Move label table to the new scope system.

* Allow assembled code viewer to show more than one label per address.

* Improve canReferencedByALabel.

* Add bad macro-call format and bad macro format inspectors.